[tool.black]
line-length = 100

[tool.poetry]
name = "erigon"
version = "0.1.0"
description = "erigon kv api"
authors = ["banteg"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
