[tool.black]
line-length = 100

[tool.poetry]
name = "erigon"
version = "0.1.0"
description = "erigon kv api"
authors = ["banteg"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = "^1.10.2"
msgspec = "^0.8.0"
grpcio = "^1.48.1"
devtools = "^0.9.0"
eth-utils = "^2.0.0"
typer = "^0.6.1"
py-evm = "^0.6.0-alpha.1"
pysha3 = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
mypy = "^0.971"
grpcio-tools = "^1.48.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
